feat: add admin payment history
